--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from 'astro:assets';
-import advisor1 from '../assets/images/asesor_1.png';
-import advisor2 from '../assets/images/asesor_2.png';
-import advisor3 from '../assets/images/asesor_3.png';
+import advisor1 from '../../public/asesor_1.webp';
+import advisor2 from '../../public/asesor_2.webp';
+import advisor3 from '../../public/asesor_3.webp';
 
 
 
