--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -64,10 +64,12 @@ const advisors = [
               src={advisor.image} 
               alt={advisor.name}
               tabindex="0"
-              class="w-full h-full object-cover transform transition-transform duration-300 ease-in-out hover:scale-105 focus:scale-105 focus:outline-none focus:ring-2 focus:ring-rp-orange"
+              class="w-full h-full object-cover transition-transform duration-300 ease-out hover:scale-105 focus:scale-105 focus:outline-none focus:ring-2 focus:ring-rp-orange"
+              style="will-change: transform; transform: translateZ(0);"
               width={128}
               height={128}
               densities={[1.5, 2]}
+              loading="lazy"
             />
           </div>
           <div class="flex-grow">
