--- a/src/pages/asesores-seguros-monterrey/index.astro
+++ b/src/pages/asesores-seguros-monterrey/index.astro
@@ -5,7 +5,7 @@ import { Image } from "astro:assets";
 
 const site = "https://segurosrp.com";
 const canonical = `${site}/asesores-seguros-monterrey`;
-const pageTitle = "Asesores Seguros Monterrey New York Life | Seguros Monterrey Asesores";
+const pageTitle = "Asesores Seguros Monterrey New York Life Asesores";
 const pageDescription =
   "Despacho de Asesores Ramírez y Plascencia (SegurosR&P). Somos asesores certificados de Seguros Monterrey New York Life. Vida, Gastos Médicos, Retiro y Educación. Atención nacional, videollamadas y firma digital.";
 
@@ -479,13 +479,7 @@ const business = {
     </main>
 
     <Footer />
-    
-    <!-- Google Tag Manager - Carga diferida optimizada -->
-    <noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5C5DGHJC"
-        height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    
+  
     <script is:inline>
       // Carga diferida de GTM - optimizada para performance
       (function() {
